--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="grid-container">
 
       <div class="box1">
-        <img src="./images/image-web-3-desktop.jpg" width=100% alt="desktop-image">
+        <img src="./images/image-web-3-desktop.jpg" alt="desktop-image">
       </div>
 
       <div class="box2">
